Add device delete functionality and update configurations

--- a/docker/backend.env
+++ b/docker/backend.env
@@ -26,6 +26,7 @@ CRYPTO_TOOL_ALGORITHM=aes-256-ctr
 # Dev
 SHOW_DEV_LOGS=true
 EXECUTE_MODE=dev
+DEBUG=backend:*
 
 # Admin Auth
 ADMIN_AUTHORIZATION_HEADER=Bearer admin_secret_token_change_in_production
