Add update device status functionality and related database procedures

--- a/docker/mosquitto/mosquitto.conf
+++ b/docker/mosquitto/mosquitto.conf
@@ -17,6 +17,14 @@ max_connections -1
 max_inflight_messages 20
 max_queued_messages 100
 
+# Keep-alive settings (in seconds)
+# Maximum keepalive time a client can request
+max_keepalive 60
+
+# System monitoring ($SYS topics)
+# Publish system status every 10 seconds
+sys_interval 10
+
 # Authentication
 allow_anonymous false
 password_file /mosquitto/data/passwd
